--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Thomas Freger</h1>
-    <p>Hollo there!</p>
+    <p>Hello there!</p>
     <img src="https://images.prismic.io/thms-studio/3df6db83-c628-4ec9-95e9-fdb843df58a3_THMS+Buste+mauve.jpg?auto=compress,format" />
   </body>
 </html>
